[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-locker"
version = "1.0.0"
dependencies = []
requires-python = ">= 3.14"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.optional-dependencies]
redis = ["redis>=7.1.0"]
